# level2-mrc-nlp-02

./: .gitignore  README.md  activate.sh  arguments.py  inference.py  pyproject.toml  retrieval.py
Reader/logs/: readme.txt
Reader/saves/: readme.txt
Reader/train/: train.py  trainers.py
Reader/utils/: run_mrc.py  utils_qa.py
Retriever/: readme.txt
Retriever/chw/: dense_test.py  hybrid_test.py  readme.md  sparse_test.py
Retriever/chw/embedding/: dense.py  hybrid.py  sparse.py
Retriever/chw/model/: encoder.py
Retriever/chw/sample/: dataset_analysis.py
Retriever/chw/script/: run_dense.sh  run_hybrid.sh  run_sparse.sh
Retriever/chw/utils/: util.py
Retriever/leeinseol/: DenseRetriever.py  Sparse_retriever.py  arguments_retriever.py  dataset_retriever.py  deliver_to_reader.py  hybrid_retriever.py  inference_retriever.py  metrics_retriever.py  reranking_retriever.py  train_retriever.py  utils_retriever.py
data/: readme.txt
manual/: poetry.md
