[tool.poetry]
name = "level2-pjt"
version = "1.0.0"
description = "boostcamp level2_pjt_open domain question answering"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "1.13"
datasets = "2.15.0"
transformers = "4.25.1"
tqdm = "^4.66.5"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
faiss-gpu = "^1.7.2"
numpy = "<2.0"
rank-bm25 = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
